--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-i
+
+<!DOCTYPE html> <!--dit is de homepage van mijn site-->
+<html> <!--dit is het html element-->
+<head>
+    <title>Het eerste begint</title>
+    <meta charset="utf-8">
+    </head>
+    <body>
+        Hier komt mijn eerste tekst 
+    </body>
+    </html>
