--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html> <!--dit is de tweede pagina van mijn site-->
 <html> <!--dit is het html element-->
 <head>
@@ -7,5 +6,7 @@
     </head>
     <body>
         Uitleg over het binaire stelsel
+
+    <a href="index.html">Home</a> <!--Link terug naar Homepage-->
     </body>
     </html>
