link terug naar homepage

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <body>
         Hier komt mijn eerste tekst 
 
+      <br>
+      <br>  
+        
         <a href="binairstelsel.html">Uitleg binairstelsel</a>
+
+        <br>
+        <br>
+
+        <img src="download.jpg" alt="Camels in the desert>"
+
     </body>
     </html>
