verandering alt tekst

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <br>
         <br>
 
-        <img src="download.jpg" alt="Camels in the desert>"
+        <img src="download.jpg" alt="Deze site is nog niet af>"
 
     </body>
     </html>
