verandering alt tekst

--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -7,6 +7,16 @@
     <body>
         Uitleg over het binaire stelsel
 
-    <a href="index.html">Home</a> <!--Link terug naar Homepage-->
+   
+     <br>
+     <br>
+
+     <a href="index.html">Home</a> <!--Link terug naar Homepage-->
+
+     <br>
+     <br>
+
+     <img src="Eiffeltoren-in-Parijs.jpg" alt="Deze website is nog niet af>"
+
     </body>
     </html>
