--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -6,15 +6,12 @@
     </head>
     <body>
         Uitleg over het binaire stelsel
-
-   
-     <br>
-     <br>
-
-     <a href="index.html">Home</a> <!--Link terug naar Homepage-->
-
-     <br>
-     <br>
+    <br>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href='binairstelsel.html'>Binair stelsel</a></li>
+        <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
+    </ul>
 
      <img src="Eiffeltoren-in-Parijs.jpg" alt="Deze website is nog niet af>"
 
