--- a/index.html
+++ b/index.html
@@ -6,17 +6,14 @@
     <meta charset="utf-8">
     </head>
     <body>
-        Hier komt mijn eerste tekst 
-
-      <br>
-      <br>  
+        Hier komt mijn eerste tekst
+            <ul>
+            <li><a href='index.html'>Home</a></li>
+            <li><a href="binairstelsel.html">Uitleg binairstelsel</a></li>
+            <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
+            </ul>
         
-        <a href="binairstelsel.html">Uitleg binairstelsel</a>
-
-        <br>
-        <br>
-
-        <img src="download.jpg" alt="Deze site is nog niet af>"
+         <img src="download.jpg" alt="Deze site is nog niet af>"
 
     </body>
     </html>
