--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -12,6 +12,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href='binairstelsel.html'>Binair stelsel</a></li>
         <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
+        <li><a href='Algemene informatie.html'>Algemene informatie</a></li>
     </ul>
 
 
