--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -13,6 +13,7 @@
             <li><a href='index.html'>Home</a></li>
             <li><a href="binairstelsel.html">Uitleg binairstelsel</a></li>
             <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
+            <li><a href='Algemene informatie.html'>Algemene informatie</a></li>
         </ul>
 
     </body>
