--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <li><a href="binairstelsel.html">Uitleg binairstelsel</a></li>
             <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
             <li><a href='Algemene informatie.html'>Algemene informatie</a></li>
+            <li><a href='Bestandsformaten.html'>Bestandsformaten</a></li>
             </ul>
     
 
