--- a/Bestandsformaten.html
+++ b/Bestandsformaten.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html> 
+<html> 
+<head>
+    <title> Algemene informatie   </title>
+    <link rel="stylesheet" type="text/css" href="opmaak.css">
+    <meta charset="utf-8">
+    </head>
+    <body>
+        
+     <br>
+        <ul id="ul1"> 
+            <li><a href='index.html'>Home</a></li>
+            <li><a href="binairstelsel.html">Uitleg binairstelsel</a></li>
+            <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
+            <li><a href='Algemene informatie.html'>Algemene informatie</a></li>
+            <li><a href='Bestandsformaten.html'>Bestandsformaten</a></li>
+        </ul>
 
+    </body>
+</html>
