--- a/Bestandsformaten.html
+++ b/Bestandsformaten.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
 <head>
-    <title> Algemene informatie   </title>
+    <title> Bestandsformaten  </title>
     <link rel="stylesheet" type="text/css" href="opmaak.css">
     <meta charset="utf-8">
     </head>
