links compressie.html

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
             <li><a href='Algemene informatie.html'>Algemene informatie</a></li>
             <li><a href='Bestandsformaten.html'>Bestandsformaten</a></li>
+            <li><a href='compressie.html'>Compressie</a></li>
             </ul>
     
 
