--- a/Bestandsformaten.html
+++ b/Bestandsformaten.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html> 
 <head>
-    <title> Bestandsformaten  </title>
+    <title> Uitleg over bestandsvormen  </title>
     <link rel="stylesheet" type="text/css" href="opmaak.css">
     <meta charset="utf-8">
     </head>
@@ -14,6 +14,7 @@
             <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
             <li><a href='Algemene informatie.html'>Algemene informatie</a></li>
             <li><a href='Bestandsformaten.html'>Bestandsformaten</a></li>
+            <li><a href='compressie.html'>Compressie</a></li>
         </ul>
 
     </body>
