--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         Hier komt mijn eerste tekst
  <ul id="ul1"> 
             <li><a href='index.html'>Home</a></li>
-            <li><a href="binairstelsel.html">Uitleg binairstelsel</a></li>
+            <li><a href="binairstelsel.html">Binairstelsel</a></li>
             <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
             <li><a href='Algemene informatie.html'>Algemene informatie</a></li>
             <li><a href='Bestandsformaten.html'>Bestandsformaten</a></li>
