--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     </head>
     <body>
-        Uitleg over het binaire stelsel
+        
     <br>
     <ul id="ul1"> 
         <li><a href="index.html">Home</a></li>
@@ -16,7 +16,11 @@
         <li><a href='Bestandsformaten.html'>Bestandsformaten</a></li>
         <li><a href='Compressie.html'>Compressie</a></li>
     </ul>
+Uitleg over het binaire stelsel
 
+            Het binaire stelsel is een numeriek systeem dat bestaat uit de cijfers 0 en 1. 
+            Het wordt veel gebruikt in de informatica en digitale electronica, omdat computers infomatie opslaan en verwerken
+            in de vorm van binaire getallen. In het binaire stelse worden getallen opgebouwd door verschillende machten van 2 te combineren.
 
-    </body>
+  </body>
     </html>
