--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> <!--dit is de tweede pagina van mijn site-->
 <html> <!--dit is het html element-->
 <head>
-    <title>Binairstelsel</title>
+    <title> Uitleg over het binaire stelsel</title>
     <link rel="stylesheet" type="text/css" href="opmaak.css">
     <meta charset="utf-8">
     </head>
@@ -10,7 +10,7 @@
     <br>
     <ul id="ul1"> 
         <li><a href="index.html">Home</a></li>
-        <li><a href='binairstelsel.html'>Binairstelsel</a></li>
+        <li><a href='binairstelsel.html'>Binaire stelsel</a></li>
         <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
         <li><a href='Algemene informatie.html'>Algemene informatie</a></li>
         <li><a href='Bestandsformaten.html'>Bestandsformaten</a></li>
