--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -8,6 +8,7 @@
     <body>
 
     <br>
+        #tekst1 
     <ul id="ul1"> 
         <li><a href="index.html">Home</a></li>
         <li><a href='binairstelsel.html'>Binaire stelsel</a></li>
