--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -16,8 +16,8 @@
         <li><a href='Bestandsformaten.html'>Bestandsformaten</a></li>
         <li><a href='Compressie.html'>Compressie</a></li>
     </ul>
-    
-    
+
+   <h1>Uitleg binaire stelsel</h1>
 Het binaire stelsel is een getalsysteem dat slechts twee cijfers gebruikt: 0 en 1. In tegenstelling tot het decimale stelsel, dat we dagelijks gebruiken en gebaseerd is op tien cijfers (0 tot 9), gebruikt het binaire stelsel alleen deze twee cijfers. Elk cijfer in een binair getal vertegenwoordigt een macht van 2, beginnend vanaf rechts naar links.
 
 Hier is een eenvoudig voorbeeld:
