--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -16,9 +16,9 @@
         <li><a href='Bestandsformaten.html'>Bestandsformaten</a></li>
         <li><a href='Compressie.html'>Compressie</a></li>
     </ul>
-
+<div id="tekst1">
    <h1>Uitleg binaire stelsel</h1>
-Het binaire stelsel is een getalsysteem dat slechts twee cijfers gebruikt: 0 en 1. In tegenstelling tot het decimale stelsel, dat we dagelijks gebruiken en gebaseerd is op tien cijfers (0 tot 9), gebruikt het binaire stelsel alleen deze twee cijfers. Elk cijfer in een binair getal vertegenwoordigt een macht van 2, beginnend vanaf rechts naar links.
+<p>Het binaire stelsel is een getalsysteem dat slechts twee cijfers gebruikt: 0 en 1. In tegenstelling tot het decimale stelsel, dat we dagelijks gebruiken en gebaseerd is op tien cijfers (0 tot 9), gebruikt het binaire stelsel alleen deze twee cijfers. Elk cijfer in een binair getal vertegenwoordigt een macht van 2, beginnend vanaf rechts naar links.
 
 Hier is een eenvoudig voorbeeld:
 
@@ -28,7 +28,9 @@ Hier is een eenvoudig voorbeeld:
 11 in binair is 3 in decimaal (1 * 2^1 + 1 * 2^0 = 3).
 100 in binair is 4 in decimaal (1 * 2^2 + 0 * 2^1 + 0 * 2^0 = 4).
 Het binaire stelsel is van cruciaal belang in de wereld van computers en digitale elektronica, omdat het de basis vormt voor de opslag en verwerking van informatie in de vorm van binaire getallen, ook wel bekend als bits (0 en 1). Alle gegevens, tekst, afbeeldingen en programma's op een computer worden uiteindelijk als reeksen van nullen en enen opgeslagen en verwerkt. Het binaire stelsel maakt deze digitale communicatie en berekeningen mogelijk.
-      
+</p>
+<div>  
+
 
   </body>
     </html>
