--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -29,6 +29,8 @@ Hier is een eenvoudig voorbeeld:
 100 in binair is 4 in decimaal (1 * 2^2 + 0 * 2^1 + 0 * 2^0 = 4).
 Het binaire stelsel is van cruciaal belang in de wereld van computers en digitale elektronica, omdat het de basis vormt voor de opslag en verwerking van informatie in de vorm van binaire getallen, ook wel bekend als bits (0 en 1). Alle gegevens, tekst, afbeeldingen en programma's op een computer worden uiteindelijk als reeksen van nullen en enen opgeslagen en verwerkt. Het binaire stelsel maakt deze digitale communicatie en berekeningen mogelijk.
 </p>
+    <img src="screenshot_color_nl.jpg" alt='error'> 
+    </body>
 </div>  
 
 
