--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -18,16 +18,13 @@
     </ul>
 <div id="tekst1">
    <h1>Uitleg binaire stelsel</h1>
-<p>Het binaire stelsel is een getalsysteem dat slechts twee cijfers gebruikt: 0 en 1. In tegenstelling tot het decimale stelsel, dat we dagelijks gebruiken en gebaseerd is op tien cijfers (0 tot 9), gebruikt het binaire stelsel alleen deze twee cijfers. Elk cijfer in een binair getal vertegenwoordigt een macht van 2, beginnend vanaf rechts naar links.
+<p>Het binaire stelsel is een wiskundig systeem dat bestaat uit slechts twee cijfers: 0 en 1. In tegenstelling tot ons gebruikelijke decimale stelsel, waarin we tien cijfers hebben (0 t/m 9), gebruikt het binaire stelsel dus maar twee cijfers. Deze twee cijfers vertegenwoordigen de laagste eenheid van informatie in computers, namelijk "aan" (1) en "uit" (0).
 
-Hier is een eenvoudig voorbeeld:
-
-0 in binair is 0 in decimaal.
-1 in binair is 1 in decimaal.
-10 in binair is 2 in decimaal (1 * 2^1 + 0 * 2^0 = 2).
-11 in binair is 3 in decimaal (1 * 2^1 + 1 * 2^0 = 3).
-100 in binair is 4 in decimaal (1 * 2^2 + 0 * 2^1 + 0 * 2^0 = 4).
-Het binaire stelsel is van cruciaal belang in de wereld van computers en digitale elektronica, omdat het de basis vormt voor de opslag en verwerking van informatie in de vorm van binaire getallen, ook wel bekend als bits (0 en 1). Alle gegevens, tekst, afbeeldingen en programma's op een computer worden uiteindelijk als reeksen van nullen en enen opgeslagen en verwerkt. Het binaire stelsel maakt deze digitale communicatie en berekeningen mogelijk.
+    Elk cijfer in het binaire stelsel heeft een specifieke waarde, net zoals cijfers in ons decimale stelsel. De positie van een cijfer in een binaire getal vertegenwoordigt een bepaalde macht van 2. Bijvoorbeeld, het binaire getal "1010" staat voor:
+    
+    (1 * 2^3) + (0 * 2^2) + (1 * 2^1) + (0 * 2^0) = 8 + 0 + 2 + 0 = 10 (in ons decimale stelsel)
+    
+    Het binaire stelsel is cruciaal voor computers, omdat elektronische schakelingen heel efficiënt "aan" (1) en "uit" (0) kunnen vertegenwoordigen. Dit maakt het mogelijk om informatie op te slaan, te verwerken en over te dragen met behulp van digitale technologieën. Het binaire stelsel vormt dus de basis van de moderne computerwetenschap en informatica.
 </p>
     <img src="screenshot_color_nl.jpg" alt='error'> 
     </body>
