--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -18,13 +18,13 @@
     </ul>
 <div id="tekst1">
    <h1>Uitleg binaire stelsel</h1>
-<p>Het binaire stelsel is een wiskundig systeem dat bestaat uit slechts twee cijfers: 0 en 1. In tegenstelling tot ons gebruikelijke decimale stelsel, waarin we tien cijfers hebben (0 t/m 9), gebruikt het binaire stelsel dus maar twee cijfers. Deze twee cijfers vertegenwoordigen de laagste eenheid van informatie in computers, namelijk "aan" (1) en "uit" (0).
+<p>Het binaire stelsel is een wiskundig systeem dat uit slechts twee cijfers bestaat: 0 en 1. In contrast met onze gebruikelijke decimale stelsel, die tien cijfers bevat (0 t/m 9), bevat het binaire stelsel dus maar twee cijfers ( 0 en 1). Deze twee cijfers vormen de laagste eenheid van informatie in computers, namelijk "aan" (1) en "uit" (0).
 
-    Elk cijfer in het binaire stelsel heeft een specifieke waarde, net zoals cijfers in ons decimale stelsel. De positie van een cijfer in een binaire getal vertegenwoordigt een bepaalde macht van 2. Bijvoorbeeld, het binaire getal "1010" staat voor:
+    Elk cijfer in het binaire stelsel heeft een unieke waarde, net zoals cijfers in ons gebruikelijke decimale stelsel. De plek van een cijfer in een binaire getal stelt een bepaalde macht van 2 voor. Bijvoorbeeld, het binaire getal "1010" staat voor:
     
     (1 * 2^3) + (0 * 2^2) + (1 * 2^1) + (0 * 2^0) = 8 + 0 + 2 + 0 = 10 (in ons decimale stelsel)
     
-    Het binaire stelsel is cruciaal voor computers, omdat elektronische schakelingen heel efficiënt "aan" (1) en "uit" (0) kunnen vertegenwoordigen. Dit maakt het mogelijk om informatie op te slaan, te verwerken en over te dragen met behulp van digitale technologieën. Het binaire stelsel vormt dus de basis van de moderne computerwetenschap en informatica.
+    Het binaire stelsel is heel erg belangrijk voor computers, omdat elektronische schakelingen heel efficiënt "aan" (1) en "uit" (0) kunnen realiseren. Dit maakt het mogelijk om informatie snel op te slaan, in de computer te verwerken en over te dragen met behulp van digitale technologieën. Het binaire stelsel vormt dus de basis van de computerwetenschap en informatica.
 </p>
     <img src="screenshot_color_nl.jpg" alt='error'> 
     </body>
