--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -18,7 +18,7 @@
     </ul>
 <div id="tekst1">
    <h1>Uitleg binaire stelsel</h1>
-<p>Het binaire stelsel is een wiskundig systeem dat uit slechts twee cijfers bestaat: 0 en 1. In contrast met onze gebruikelijke decimale stelsel, die tien cijfers bevat (0 t/m 9), bevat het binaire stelsel dus maar twee cijfers ( 0 en 1). Deze twee cijfers vormen de laagste eenheid van informatie in computers, namelijk "aan" (1) en "uit" (0).
+<p>Het binaire stelsel is een wiskundig systeem dat uit slechts twee cijfers bestaat: 0 en 1. In contrast met ons gebruikelijke decimale stelsel, die tien cijfers bevat (0 t/m 9), bevat het binaire stelsel dus maar twee cijfers ( 0 en 1). Deze twee cijfers vormen de laagste eenheid van informatie in computers, namelijk "aan" (1) en "uit" (0).
 
     Elk cijfer in het binaire stelsel heeft een unieke waarde, net zoals cijfers in ons gebruikelijke decimale stelsel. De plek van een cijfer in een binaire getal stelt een bepaalde macht van 2 voor. Bijvoorbeeld, het binaire getal "1010" staat voor:
     
