--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -21,7 +21,7 @@
             <h1>Uitleg Kleurmodellen</h1>
             <p> Kleurmodellen in de informatica zijn systemen om kleuren numeriek weer te geven. De belangrijkste zijn:
 
-                RGB: Gebruikt voor schermen, waar kleuren worden gemaakt door de intensiteiten van rood, groen en blauw licht te mengen (0-255).
+                RGB: Gebruikt voor schermen, waar kleuren worden gemaakt en ele grote piemls door de intensiteiten van rood, groen en blauw licht te mengen (0-255).
                 
                 CMYK: Voor drukwerk, waar kleuren worden gemaakt door cyaan, magenta, geel en zwart te combineren.
                 
