--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -26,7 +26,9 @@
     
     Het binaire stelsel is heel erg belangrijk voor computers, omdat elektronische schakelingen heel efficiënt "aan" (1) en "uit" (0) kunnen realiseren. Dit maakt het mogelijk om informatie snel op te slaan, in de computer te verwerken en over te dragen met behulp van digitale technologieën. Het binaire stelsel vormt dus de basis van de computerwetenschap en informatica.
 </p>
-    <img src="screenshot_color_nl.jpg" alt='error'> 
+<a= href='https://www.youtube.com/watch?v=xS8U6eoXhNg'>
+<img src="screenshot_color_nl.jpg" alt='error'>
+</a>
     </body>
 </div>  
 
