--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="opmaak.css">
     <meta charset="utf-8">
     </head>
-    <body>
+    <body class="Kleurmodellen">
         
 
         <br>
