--- a/Compressie.html
+++ b/Compressie.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="opmaak.css">
     <meta charset="utf-8">
     </head>
-    <body class="Compressie">
+    <body style='background-color: rgba(176, 107, 10, 0.996)';>
         
      <br>
         <ul id="ul1"> 
