--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -40,7 +40,7 @@
 
 
 </p>
-<a= href='https://www.youtube.com/watch?v=xS8U6eoXhNg'>
+<a= href='https://www.youtube.com/watch?v=xS8U6eoXhNg' target="_blank">
 <img src="screenshot_color_nl.jpg" alt='error'>
 </a>
     </body>
