--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -37,7 +37,7 @@
     Het binaire stelsel vormt de basis van digitale elektronica, omdat computers informatie opslaan en verwerken in de vorm van binaire gegevens. Het begrijpen van 
     het binaire stelsel en de bijbehorende concepten is erg belangrijk voor het begrijpen van hoe computers werken en hoe gegevens worden opgeslagen in de digitale wereld.</p>
 
-
+<p> Klik op de afbeelding hieronder voor een uitlegvideo </p>
 
 </p>
 <a href='https://www.youtube.com/watch?v=xS8U6eoXhNg' target="_blank">
