--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -44,6 +44,10 @@
 
             </p>
 
+            <p>De link hieronder stuurt je naar een website voor nog meer informatie over Kleurmodellen</p>
+
+            <a href="https://www.codecenter.nl/pr/tutorial/html/kleuren" target="_blank"> </a>
+
 
 
         </div>
