--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -46,7 +46,7 @@
 
             <p>De link hieronder stuurt je naar een website voor nog meer informatie over Kleurmodellen</p>
 
-            <a href="https://www.codecenter.nl/pr/tutorial/html/kleuren" target="_blank"> </a>
+            <a href="https://www.codecenter.nl/pr/tutorial/html/kleuren">error</a>
 
 
 
