--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -44,7 +44,7 @@
 
             </p>
 
-            <p>De link hieronder stuurt je naar een website voor nog meer informatie over Kleurmodellen</p>
+            <p>De link hieronder stuurt je naar een website voor nog meer informatie over Kleurmodellen.</p>
 
             <a href="https://www.codecenter.nl/pr/tutorial/html/kleuren">error</a>
 
