--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li><a href='Bestandsformaten.html'>Bestandsformaten</a></li>
             <li><a href='Compressie.html'>Compressie</a></li>
             </ul>
-    
+    <h1>Welkom op mijn website</h1>
 
     </body>
 </html>
