--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -47,6 +47,9 @@
 
             <a href="https://www.codecenter.nl/pr/tutorial/html/kleuren">Extra uitleg Kleurmodellen</a>
 
+             <br>
+             <img src="basic.gif" alt='error'>
+
 
 
         </div>
