--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -43,7 +43,10 @@
 <a href='https://www.youtube.com/watch?v=xS8U6eoXhNg' target="_blank">
 <img src="screenshot_color_nl.jpg" alt='error'>
 </a>
-    </body>
+<p>ASII-tabel</p>
+<img src="basic.gif" alt='error'>
+   
+</body>
 </div>  
 
 
