--- a/Compressie.html
+++ b/Compressie.html
@@ -16,6 +16,30 @@
             <li><a href='Bestandsformaten.html'>Bestandsformaten</a></li>
             <li><a href='Compressie.html'>Compressie</a></li>
         </ul>
+<h1>Uitleg over compressietechnieken</h1>
+        <p>
+Eerst een overzicht van hoe beeld en geluid worden opgeslagen.</p>
+<p>Beeldopslag:
+<h1>Bitmapafbeeldingen :</h1>
+Bitmapafbeeldingen zijn samengesteld uit een raster of matrix van pixels (beeldpunten). Elke pixel slaat informatie op over kleur (bijv. RGB-waarden) en intensiteit. Populaire formaten voor bitmapafbeeldingen zijn JPEG, PNG, BMP en GIF. Deze afbeeldingen zijn resolutieafhankelijk, wat betekent dat ze kunnen vervagen als ze worden vergroot.
+Vectorafbeeldingen:
+Vectorafbeeldingen worden opgeslagen als wiskundige instructies: (lijnen, vormen, curven, etc.).Ze zijn resolutieonafhankelijk en kunnen altijd worden vergroot zonder dat de kwaliteit wordt verminderd. Populaire formaten voor vectorafbeeldingen zijn SVG (Scalable Vector Graphics) en AI (Adobe Illustrator).
+Geluidsopslag:
+Analoge geluidsopslag:
+Vroeger werden geluiden analoog opgenomen op bijvoorbeeld cassettebandjes, waarin geluidsgolven direct worden vastgelegd.
+Digitale geluidsopslag:
+In het digitale domein wordt geluid omgezet in discrete getallen (samples met behulp van het proces sampling.
+Sampling en Sample Rate:
+Sampling: Het proces van het nemen van monsters (samples) van een continu signaal om het om te zetten in een digitaal signaal.
+Sample Rate: Dit is het aantal samples per seconde dat wordt genomen om het analoge signaal om te zetten naar digitaal. Het wordt gemeten in Hertz (Hz). De cd-kwaliteit heeft bijvoorbeeld een sample rate van 44,1 kHz, wat betekent dat er 44.100 samples per seconde worden genomen.
+Tekstcompressie:
+Tekstcompressie is het verminderen van de hoeveelheid gegevens die nodig is om tekst op te slaan of over te dragen. Er zijn twee hoofdtypen tekstcompressie:
+Lossless compressie: Dit type compressie behoudt alle oorspronkelijke gegevens wanneer de tekst wordt uitgepakt. Voorbeelden hiervan zijn ZIP- en GZIP-formaten.
+Lossy compressie: Hierbij worden gegevens verwijderd om de bestandsgrootte te verkleinen. Dit kan zorgen voor kwaliteitsverlies, maar wordt vaak gebruikt voor multimediaformaten zoals JPEG voor afbeeldingen en MP3 voor audiobestanden.
+Kort samengevat, beeld en geluid worden opgeslagen als bitmapafbeeldingen en digitale geluidsgolven, waarbij sampling en sample rate een belangrijke rol spelen in geluidsopslag. Tekstcompressie is een methode om tekstbestanden kleiner te maken zonder verlies of vermindering van gegevens.
+
+            
+        </p>
 
     </body>
 </html>
