--- a/Compressie.html
+++ b/Compressie.html
@@ -16,6 +16,7 @@
             <li><a href='Bestandsformaten.html'>Bestandsformaten</a></li>
             <li><a href='Compressie.html'>Compressie</a></li>
         </ul>
+        <div id='tekst1'>
 <h1>Uitleg over compressietechnieken</h1>
         <p>
 Eerst een overzicht van hoe beeld en geluid worden opgeslagen.</p>
