--- a/Compressie.html
+++ b/Compressie.html
@@ -41,8 +41,9 @@ Vectorafbeeldingen worden opgeslagen als wiskundige instructies: (lijnen, vormen
 <p>Lossy compressie: Hierbij worden gegevens verwijderd om de bestandsgrootte te verkleinen. Dit kan zorgen voor kwaliteitsverlies, maar wordt vaak gebruikt voor multimediaformaten zoals JPEG voor afbeeldingen en MP3 voor audiobestanden.</p>
 <p>Kort samengevat, beeld en geluid worden opgeslagen als bitmapafbeeldingen en digitale geluidsgolven, waarbij sampling en sample rate een belangrijke rol spelen in geluidsopslag. Tekstcompressie is een methode om tekstbestanden kleiner te maken zonder verlies of vermindering van gegevens.</p>
 
-            
-        </p>
+             </p>
+<a href='<a href='https://www.youtube.com/watch?v=xS8U6eoXhNg' target="_blank">
+
 
     </body>
 </html>
