--- a/Compressie.html
+++ b/Compressie.html
@@ -43,6 +43,7 @@ Vectorafbeeldingen worden opgeslagen als wiskundige instructies: (lijnen, vormen
 
              </p>
 <a href='https://www.youtube.com/watch?v=xS8U6eoXhNg' target="_blank">
+    <img src="what-is-sampling-rate-sample-depth-and-audio-sampling-in-audio.html" alt="error">
 
 
     </body>
