--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -14,7 +14,7 @@
         <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
         <li><a href='Algemene informatie.html'>Algemene informatie</a></li>
         <li><a href='Bestandsformaten.html'>Bestandsformaten</a></li>
-        <li><a href='Compressie.html'>Compressie</a></li>
+        <li><a href='Compressie.html'>Compressietechnieken</a></li>
     </ul>
 <div id="tekst1">
    <h1>Uitleg binaire stelsel</h1>
