--- a/Algemene informatie.html
+++ b/Algemene informatie.html
@@ -12,7 +12,7 @@
             <li><a href='index.html'>Home</a></li>
             <li><a href="binairstelsel.html">Binaire stelsel</a></li>
             <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
-            <li><a href='Algemene informatie.html'>Algemene informatie</a></li>
+            <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
             <li><a href='Bestandsformaten.html'>Bestandsformaten</a></li>
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
         </ul>
