--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
             <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
             <li><a href='Bestandsformaten.html'>Bestandsformaten</a></li>
-            <li><a href='Compressie.html'>Compressie</a></li>
+            <li><a href='Compressie.html'>Compressietechnieken</a></li>
             </ul>
     <h1>Welkom op mijn website</h1>
 
