--- a/Algemene informatie.html
+++ b/Algemene informatie.html
@@ -15,6 +15,20 @@
             <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
         </ul>
+        <div id="tekst">
+       <h1>Werking van de Computer</h1>
+            Een computer werkt door vier processen: invoer, verwerking, opslag en uitvoer. 
+<p>Invoer (Input): Invoer verwijst naar de gegevens of informatie die de computer binnenkomt. Dit kan via verschillende apparaten, zoals toetsenborden, muizen, microfoons, camera's of sensoren. De computer neemt deze gegevens in een digitale vorm op, die begrijpelijk is voor de machine.</p>
 
+
+<p>Verwerking (Processing): Zodra de gegevens zijn ingevoerd, begint de computer met verwerken. Dit doet de computer door het uitvoeren van berekeningen, uitvoeren van instructies en het maken van beslissingen op basis van de ontvangen gegevens. De centrale verwerkingseenheid (CPU) is verantwoordelijk voor deze taak en gebruikt softwareprogramma's om de gegevens uiteindelijk te verwerken.</p>
+
+
+<p>Opslag: Tijdens het verwerkingsproces kunnen gegevens tijdelijk in het geheugen van de computer worden bewaard. Maar om alle gegevens te behouden, gebruikt een computer opslagapparaten zoals harde schijven. Deze opslagapparaten slaan programma's, bestanden en gegevens op, zodat je ze later kan gebruiken.</p>
+
+
+<p>Uitvoer: Nadat de computer de gegevens heeft verwerkt en beslissingen heeft genomen, genereert deze uitvoer. Dit kan via verschillende uitvoerapparaten, zoals beeldschermen, luidsprekers, printers of zelfs motorische apparaten zoals robots. De uitvoer laat de resultaten van de verwerking zien.</p>
+
+</div>
     </body>
 </html>
