--- a/Compressie.html
+++ b/Compressie.html
@@ -45,6 +45,6 @@ Vectorafbeeldingen worden opgeslagen als wiskundige instructies: (lijnen, vormen
     
     <p><img src="what-is-sampling-rate-sample-depth-and-audio-sampling-in-audio.html" alt="error"></p>
 
-
+</div>
     </body>
 </html>
