--- a/Algemene informatie.html
+++ b/Algemene informatie.html
@@ -15,7 +15,7 @@
             <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
         </ul>
-        <div id="tekst">
+        <div id="tekst1">
        <h1>Werking van de Computer</h1>
             Een computer werkt door vier processen: invoer, verwerking, opslag en uitvoer. 
 <p>Invoer (Input): Invoer verwijst naar de gegevens of informatie die de computer binnenkomt. Dit kan via verschillende apparaten, zoals toetsenborden, muizen, microfoons, camera's of sensoren. De computer neemt deze gegevens in een digitale vorm op, die begrijpelijk is voor de machine.</p>
