--- a/Compressie.html
+++ b/Compressie.html
@@ -41,7 +41,7 @@ Vectorafbeeldingen worden opgeslagen als wiskundige instructies: (lijnen, vormen
 <p>Kort samengevat, beeld en geluid worden opgeslagen als bitmapafbeeldingen en digitale geluidsgolven, waarbij sampling en sample rate een belangrijke rol spelen in geluidsopslag. Tekstcompressie is een methode om tekstbestanden kleiner te maken zonder verlies of vermindering van gegevens.</p>
 
              </p>
-<a href='https://www.youtube.com/watch?v=OtDxDvCpPL4' target="_blank">
+<a href='https://www.youtube.com/watch?v=OtDxDvCpPL4' target="_blank"></a>
     
     <p><img src="what-is-sampling-rate-sample-depth-and-audio-sampling-in-audio.html" alt="error"></p>
 
