--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" type="text/css" href="opmaak.css">
     <meta charset="utf-8">
  </head>
- <body class="home">   
+ <body class='home,footer'>   
 
-<class= footer></class>
+
         
    
      <br>
