--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="opmaak.css">
     <meta charset="utf-8">
  </head>
- <body class='home,footer'>   
+ <body class="home">   
 
 
         
@@ -20,6 +20,8 @@
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
             </ul>
     <h1>Welkom op mijn website</h1>
+    
+<div id="footer"></div>
 
     </body>
 </html>
