--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  </head>
  <body class="home">   
 
-
+<link href="footer">
         
    
      <br>
@@ -21,7 +21,7 @@
             </ul>
     <h1>Welkom op mijn website</h1>
     
-<div id="footer"></div>
+
 
     </body>
 </html>
