--- a/index.html
+++ b/index.html
@@ -3,23 +3,23 @@
 <html> <!--dit is het html element-->
 <head>
     <title>Homepagina</title>
-    <link rel="stylesheet" type="text/css" href="opmaak.css">
+    <link rel="stylesheet" type="text/css" href="opmaak.css"><!--link naar css-->
     <meta charset="utf-8">
  </head>
- <body class="home">   
+ <body class="home"><!--zorgt voor aanpassingen op de homepage--> 
 
-<footer class="footer">
+<footer class="footer"><!--zorgt voor footer op de homepage-->
         
    
      <br>
-        <ul id="ul1"> 
+        <ul id="ul1"> <!--link naar css om menu te creeren-->
             <li><a href='index.html'>Home</a></li>
             <li><a href="binairstelsel.html">Binaire stelsel</a></li>
             <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
             <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
             </ul>
-    <h1>Welkom op mijn website</h1>
+    <h1>Welkom op mijn website</h1><!--zorgt voor groter lettertype voor titel-->
     
 
 
