--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -32,7 +32,7 @@
                 Het CMYK-kleurmodel wordt vooral gebruikt in drukwerk, zoals tijdschriften, kranten, brochures en posters bijvoorbeeld. In dit model worden kleuren gemaakt door het mengen van vier inktkleuren: cyaan, magenta, zwart en geel.
                 In contrast met het RGB-model, waar kleuren worden toegevoegd om wit te creëren, worden in het CMYK-model kleuren verminderd om zwart te creëren. Dit is de reden dat zwart als 'K' genoteerd wordt. Het CMYK-model is bekend om zijn gebruik van een breed scala aan kleuren.</p>
                 
-                <p><img src="what-is-sampling-rate-sample-depth-and-audio-sampling-in-audio.html" alt="error"></p>
+                <p><a><img src="what-is-sampling-rate-sample-depth-and-audio-sampling-in-audio.html" alt="error"></a></p>
                 <p>Pixels:
                 Een pixel is de kleinste eenheid van een digitaal beeld op een scherm. Het woord "pixel" is een kortere naam voor "picture element."Pixels zijn de bouwstenen van digitale afbeeldingen. Ze hebben meestal een kleurwaarde volgens het gebruikte kleurmodel (bijvoorbeeld RGB), waardoor ze kunnen worden samengevoegd om een afbeelding weer te geven. De resolutie van een scherm of een afbeelding duidt op het aantal pixels per inch of pixels per centimeter. Hoe hoger de resolutie, hoe scherper de afbeelding is.
                
