--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
  <body class="home"><!--zorgt voor aanpassingen op de homepage--> 
 
 <footer class="footer"><!--zorgt voor footer op de homepage-->
+    <menu class="menu li">
         
    
      <br>
