--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -7,7 +7,7 @@
     </head>
     <body style='background-color: rgba(32, 165, 242, 0.996)';>
         
-
+<img class="img">
         <br>
         <ul id="ul1"> 
             <li><a href='index.html'>Home</a></li>
