--- a/Algemene informatie.html
+++ b/Algemene informatie.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     </head>
     <body style='background-color: rgba(32, 165, 242, 0.996)';>
-        
+        <menu class="menu li">   
      <br>
         <ul id="ul1"> 
             <li><a href='index.html'>Home</a></li>
