--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -32,6 +32,9 @@
      <p>'A': 01000001</p>
    <p> '7': 00110111</p>
      <p>Leesteken '?' 00111111</p>
+
+     <p><img src="basic.gif" alt='error'></p>
+     
     <p>Bitpatroon: Een bitpatroon is een reeks van bits die samen een bepaalde waarde, instructie of informatie vertegenwoordigen.</p>
    <p>Omrekenen tussen binair en decimaal: Om een binair getal naar decimaal om te rekenen, kan je elke bit gewogen optellen, waarbij de gewichten exponenten van 2 zijn. Bijvoorbeeld: 1101 in binair is gelijk aan 13 in decimaal (1x2^3 + 1x2^2 + 0x2^1 + 1x2^0).
     Omrekenen tussen binair en ASCII: Een binair patroon dat een ASCII-teken vertegenwoordigt omzetten naar het bijbehorende karakter door de ASCII-tabel te gebruiken. Bijvoorbeeld, 01001000 komt overeen met 'H' in ASCII.</p>
@@ -46,7 +49,7 @@
 <img src="screenshot_color_nl.jpg" alt='error'>
 </a>
 <p>ASII-tabel</p>
-<img src="basic.gif" alt='error'>
+
 
 
 </div>  
