--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
             </ul>
     <h1>Welkom op mijn website</h1><!--zorgt voor groter lettertype voor titel-->
-    <footer> <p>website: Eveline Nout</p>
+    <footer> <p>Maker website: Eveline Nout</p>
         <p>Vlietland College A5A</p>
         <p>eveline.nout@gmail.com</p>
     </footer>
