--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="opmaak.css"><!--link naar css-->
     <meta charset="utf-8">
  </head>
- <div id="content"><!--zorgt voor content op de homepage-->
+<body class="home">
 
 <footer class="footer"><!--zorgt voor footer op de homepage-->
     <menu class="menu li">
