--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             </ul>
     <h1>Welkom op mijn website</h1><!--zorgt voor groter lettertype voor titel-->
   
-    <footer> <p>Maker website: Eveline Nout</p>
-        <p>Vlietland College A5A</p>
-        <p>eveline.nout@gmail.com</p>
+    <footer> Maker website: Eveline Nout
+          Vlietland College A5A
+            eveline.nout@gmail.com
     </footer>
 </div>
     
