--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
             <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
             <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
-            </ul>
-    <h1>Welkom op mijn website</h1><!--zorgt voor groter lettertype voor titel-->
   
+            </ul>
+            <div id="tekst1" >    
+    <h1>Welkom op mijn website</h1><!--zorgt voor groter lettertype voor titel-->
+        </div>
     <footer> <p>Maker website: Eveline Nout</p>
           <p>Vlietland College A5A</p>
             <p>eveline.nout@gmail.com</p>
     </footer>
-</div>
+
     
 
 
