--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
   
             </ul>
-               
+       <div id="tekst1">   
     <h1>Welkom op mijn website</h1><!--zorgt voor groter lettertype voor titel-->
-     
+       </div>
+       <footer class="footer"><!--zorgt voor footer op de homepage-->
     <footer> <p>Maker website: Eveline Nout</p>
           <p>Vlietland College A5A</p>
             <p>eveline.nout@gmail.com</p>
