--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -7,6 +7,10 @@
     </head>
     <body style='background-color: rgba(32, 165, 242, 0.996)';>
         <footer class="footer"><!--zorgt voor footer op de homepage-->
+            Maker website: Eveline Nout
+            Vlietland College A5A
+            eveline.nout@gmail.com
+        </footer>
         <menu class="menu li">
         
 <img class="img">
