--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -54,6 +54,12 @@
 
 
             <a href="https://www.codecenter.nl/pr/tutorial/html/kleuren">Extra uitleg Kleurmodellen</a>
+
+            <footer class="footer"><!--zorgt voor footer op de homepage-->
+                Maker website: Eveline Nout
+                Vlietland College A5A
+                eveline.nout@gmail.com
+            </footer>
            
 
 
