--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
  </head>
 <body class="home">
 
-<footer class="footer"><!--zorgt voor footer op de homepage-->
     <menu class="menu li">
        
         
@@ -25,7 +24,7 @@
        <div id="tekst1">   
     <h1>Welkom op mijn website</h1><!--zorgt voor groter lettertype voor titel-->
        </div>
-       <footer class="footer"><!--zorgt voor footer op de homepage-->
+       <footer class="footer"><!--zorgt voor footer-->
      <p>Maker website: Eveline Nout</p>
           <p>Vlietland College A5A</p>
             <p>eveline.nout@gmail.com</p>
