--- a/Algemene informatie.html
+++ b/Algemene informatie.html
@@ -37,5 +37,11 @@
        <p>In samenhang vormen deze vier componenten de kern van de computerwerking. Ze stellen de computer in staat om gegevens te ontvangen, te bewaren, te verwerken en uiteindelijk zinvolle resultaten te produceren. Deze cyclus van invoer, verwerking, opslag en uitvoer is wat de moderne computer tot een veelzijdig hulpmiddel maakt, dat wordt gebruikt in vrijwel alle aspecten van ons dagelijks leven.</p>
 
 </div>
+
+<footer class="footer"><!--zorgt voor footer op de homepage-->
+    <p>Maker website: Eveline Nout</p>
+    <p>Vlietland College A5A</p>
+    <p>eveline.nout@gmail.com</p>
+</footer>
     </body>
 </html>
