--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -46,6 +46,12 @@
 
 
 </div>  
+ <footer class="footer"><!--zorgt voor footer op de homepage-->
+  <p>Maker website: Eveline Nout</p>
+  <p>Vlietland College A5A</p>
+  <p>eveline.nout@gmail.com</p>
+</footer>
+
 
 
   </body>
