--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   
             </ul>
        <div id="tekst1">   
-    <h1>Welkom op mijn website</h1><!--zorgt voor groter lettertype voor titel-->
+   or groter lettertype voor titel-->
        </div>
        <footer class="footer"><!--zorgt voor footer-->
      <p>Maker website: Eveline Nout</p>
