--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         
    
       
-       <footer>
+       <footer class="footer">
      <p>Maker website: Eveline Nout</p>
           <p>Vlietland College A5A</p>
             <p>eveline.nout@gmail.com</p>
