--- a/Algemene informatie.html
+++ b/Algemene informatie.html
@@ -39,7 +39,7 @@
 </div>
 
 <footer class="footer"><!--zorgt voor footer op de homepage-->
-    <p>Maker website: Eveline Nout</p>
+    <p>&copy;Maker website: Eveline Nout</p>
     <p>Vlietland College A5A</p>
     <p>eveline.nout@gmail.com</p>
 </footer>
