--- a/Compressie.html
+++ b/Compressie.html
@@ -51,7 +51,7 @@ Vectorafbeeldingen worden opgeslagen als wiskundige instructies: (lijnen, vormen
 
 </div>
 <footer class="footer"><!--zorgt voor footer op de homepage-->
-    <p>Maker website: Eveline Nout</p>
+    <p>&copy;Maker website: Eveline Nout</p>
     <p>Vlietland College A5A</p>
     <p>eveline.nout@gmail.com</p>
 </footer>
