--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -52,7 +52,7 @@
             <a href="https://www.codecenter.nl/pr/tutorial/html/kleuren">Extra uitleg Kleurmodellen</a>
 </div>
             <footer class="footer"><!--zorgt voor footer op de homepage-->
-                <p>Maker website: Eveline Nout</p>
+                <p>&copy;Maker website: Eveline Nout</p>
                 <p>Vlietland College A5A</p>
                 <p>eveline.nout@gmail.com</p>
             </footer>
