--- a/Algemene informatie.html
+++ b/Algemene informatie.html
@@ -28,7 +28,7 @@
        <h2>Opslag:</h2>
        <p>Opslag is het stadium waarin de computer de ontvangen gegevens bewaart voor toekomstig gebruik. Hierbij komt het opslagapparaat in beeld, zoals harde schijven, solid-state drives (SSD's) of externe opslagmedia. De computer organiseert de gegevens in bestanden en mappen en slaat ze op in een digitale vorm. Dit stelt de computer in staat om de gegevens later op te roepen en te gebruiken wanneer dat nodig is.</p>
       
-      <p> <a href='https://www.youtube.com/watch?v=xS8U6eoXhNg' target="_blank">
+      <p> <a href='https://www.youtube.com/watch?v=mHztQo4iLMQ&t=94s' target="_blank">
         <img src="computerconfiguratie.jpg" alt='error'>
         </a>
         </p>
