--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
    
       
        <footer class="footer">
+        <footer>
      <p>&copy;Maker website: Eveline Nout</p>
           <p>Vlietland College A5A</p>
             <p>eveline.nout@gmail.com</p>
