--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -35,7 +35,7 @@
 
   <h2>Bitpatronen:</h2> 
   <p>Bitpatronen zijn de reeksen van 0'en en 1'en die de basis vormen voor alle digitale informatie. Ze zijn als de bouwstenen van digitale gegevens en worden gebruikt om alles te coderen, van eenvoudige tekens tot complexe multimedia. Deze patronen worden opgeslagen in geheugeneenheden zoals RAM (Random Access Memory) en worden verwerkt door de CPU (Central Processing Unit) van een computer. Bitpatronen zijn ook de basis van verschillende coderingssystemen en bestandsformaten die computers in staat stellen om verschillende soorten gegevens te begrijpen en weer te geven.</p>
-   <a href="https://nl.wikihow.com/Binair-tellen" target="Binair leren tellen"></a>
+   <a href="https://nl.wikihow.com/Binair-tellen">Binair leren tellen"></a>
 </div>  
 
  <footer class="footer"><!--zorgt voor footer op de homepage-->
