--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
             </ul>
         
    
-      <background class="background">
+      <div id="tekst2">
        <footer class="footer">
      <p>&copy;Maker website: Eveline Nout</p>
           <p>Vlietland College A5A</p>
             <p>eveline.nout@gmail.com</p>
     </footer>
-    </background>
+    </div>
 </home>
     
 
