--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         
    
       <div id="tekst2">
-        
+        <p>Welkom op mijn website</p>
+        <p>Deze website bevat uitleg over verschillende onderwerpen in de informatica</p>
        <footer class="footer">
      <p>&copy;Maker website: Eveline Nout</p>
           <p>Vlietland College A5A</p>
