--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -29,13 +29,13 @@
   <p> De ASCII-tabel, wat staat voor "American Standard Code for Information Interchange", is een wijdverbreide coderingstabel in de computerwetenschap. Deze tabel associeert elke letter, cijfer en symbool dat in teksten wordt gebruikt met een unieke numerieke waarde die overeenkomt met een specifiek binair patroon. In feite wordt elke karakter in de ASCII-tabel weergegeven met behulp van 8 bits, oftewel één byte. Dit betekent dat elk karakter in tekst eenvoudigweg wordt vertegenwoordigd door een unieke reeks van 0'en en 1'en, waardoor computers het kunnen begrijpen en weergeven.</p>
   <p>ASII-tabel</p>
   
-  <a href="https://www.youtube.com/watch?v=xS8U6eoXhNg&t=1s" target="_blank">
+  <a href="https://games.penjee.com/binary-numbers-game/" target="_blank">
   <img src="basic.gif" alt="error"></a>
 
 
   <h2>Bitpatronen:</h2> 
   <p>Bitpatronen zijn de reeksen van 0'en en 1'en die de basis vormen voor alle digitale informatie. Ze zijn als de bouwstenen van digitale gegevens en worden gebruikt om alles te coderen, van eenvoudige tekens tot complexe multimedia. Deze patronen worden opgeslagen in geheugeneenheden zoals RAM (Random Access Memory) en worden verwerkt door de CPU (Central Processing Unit) van een computer. Bitpatronen zijn ook de basis van verschillende coderingssystemen en bestandsformaten die computers in staat stellen om verschillende soorten gegevens te begrijpen en weer te geven.</p>
-   <a href="https://nl.wikihow.com/Binair-tellen">Binair leren tellen</a>
+   <a href="https://www.youtube.com/watch?v=xS8U6eoXhNg&t=11s">Binaire stelsel uitlegvideo</a>
 </div>  
 
  <footer class="footer"><!--zorgt voor footer op de homepage-->
