--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -2,24 +2,24 @@
 <html> <!--dit is het html element-->
 <head>
     <title> Uitleg over het binaire stelsel</title>
-    <link rel="stylesheet" type="text/css" href="opmaak.css">
+    <link rel="stylesheet" type="text/css" href="opmaak.css"><!--link naar css voor opmaak-->
     <meta charset="utf-8">
     </head>
-    <body style='background-color:rgba(32, 165, 242, 0.996)';>
+    <body style='background-color:rgba(32, 165, 242, 0.996)';><!--achtergrondkleur-->
       
-      <menu class="menu li">
+      <menu class="menu li"><!--zorgt voor de hover-->
     
-     <img class="img">
+     <img class="img"><!--maakt de afbeelding kleiner-->
 
     <br>
-     <ul id="ul1"> 
+     <ul id="ul1"><!--zorgt voor menu op elke pagina-->
         <li><a href="index.html">Home</a></li>
         <li><a href='binairstelsel.html'>Binaire stelsel</a></li>
         <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
         <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
         <li><a href='Compressie.html'>Compressietechnieken</a></li>
     </ul>
-<div id="tekst1">
+<div id="tekst1"><!--stijl van de tekst-->
    <h1>Uitleg binaire stelsel</h1>
    <h2>Binaire stelsel:</h2> 
    <p>Binaire stelsel is een belangrijk concept in de wereld van informatica en digitale technologie. Het wordt gebruikt om informatie en data te representeren en is gebaseerd op slechts twee symbolen: 0 en 1. Deze symbolen, die bekend staan als "bits", vormen de basis van alle digitale informatie en worden gebruikt om alles, van tekst tot afbeeldingen en geluid, in een vorm om te zetten die door computers begrepen en verwerkt kunnen worden.</p>
@@ -30,7 +30,7 @@
   <p>ASII-tabel</p>
   
   <a href="https://games.penjee.com/binary-numbers-game/" target="_blank">
-  <img src="basic.gif" alt="error"></a>
+  <img src="basic.gif" alt="error"></a><!--zorgt voor link naar video achter de afbeelding-->
 
 
   <h2>Bitpatronen:</h2> 
@@ -38,7 +38,7 @@
    <a href="https://www.youtube.com/watch?v=xS8U6eoXhNg&t=11s">Binaire stelsel uitlegvideo</a>
 </div>  
 
- <footer class="footer"><!--zorgt voor footer op de homepage-->
+ <footer class="footer"><!--zorgt voor footer-->
   <p>&copy;Maker website: Eveline Nout</p>
   <p>Vlietland College A5A</p>
   <p>eveline.nout@gmail.com</p>
