--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
       <div id="tekst2"><!--zorgt voor de tekststijl op de homepage-->
         <p>Welkom op mijn website</p>
         <p>Deze website bevat uitleg over verschillende onderwerpen in de informatica</p>
-       <footer class="footer"><!--zorgt voor footer-->
+        
+        <a href="20231001_113402.mp4">Uitlegvideo over mijn website</a>
+     
+        <footer class="footer"><!--zorgt voor footer-->
      <p>&copy;Maker website: Eveline Nout</p>
           <p>Vlietland College A5A</p>
             <p>eveline.nout@gmail.com</p>
