--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <div id="tekst2"><!--zorgt voor de tekststijl op de homepage-->
         <p>Welkom op mijn website</p>
         <p>Deze website bevat uitleg over verschillende onderwerpen in de informatica</p>
-        
-        <a href="20231001_113402.mp4">Uitlegvideo over mijn website</a>
+
+        <a href="https://drive.google.com/file/d/10zbKmvzTWIqZA7shi5pZcL8kvXVVxj5n/view?usp=sharing">Uitlegvideo over mijn website</a>
      
         <footer class="footer"><!--zorgt voor footer-->
      <p>&copy;Maker website: Eveline Nout</p>
