--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
         <a href="https://drive.google.com/file/d/10zbKmvzTWIqZA7shi5pZcL8kvXVVxj5n/view?usp=sharing">Uitlegvideo over mijn website</a>
      
+        <p><img src="download.jpg" alt="error"><p><!--andere afbeelding op de homepage-->
+
         <footer class="footer"><!--zorgt voor footer-->
      <p>&copy;Maker website: Eveline Nout</p>
           <p>Vlietland College A5A</p>
