--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
      <p><img src="coding.jpeg" alt="error"></p>
        
         </div>
+        <p><img src="coding.jpeg" alt="error"></p>
 
         <footer class="footer"><!--zorgt voor footer-->
      <p>&copy;Maker website: Eveline Nout</p>
