--- a/lineairsearch.html
+++ b/lineairsearch.html
@@ -1,7 +1,9 @@
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="opmaak.css"><!--link naar css-->
+    <meta charset="utf-8">
      <menu class="menu li"> <!--link voor hover-->
-        
+
         <body style='background-color: rgba(32, 165, 242, 0.996)';><!--achtergrondkleur-->
             <menu class="menu li"><!--zorgt voor de hover-->
 <script>
@@ -33,6 +35,9 @@
     }
 
 </script>
-</body>
 </head>
+</head>
+</body>
+
+
 </html>
