--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html> 
+<html> 
+<head>
+    <title> Uitleg over computerarchitectuur  </title>
+    <link rel="stylesheet" type="text/css" href="opmaak.css"><!--link naar css voor opmaak-->
+    <meta charset="utf-8">
+    </head>
+    <body style='background-color:rgba(32, 165, 242, 0.996)';><!--achtergrondkleur-->
 
+        <menu class="menu li"><!--zorgt voor de hover-->
+            
+        
+     <br>
+        <ul id="ul1"><!--zorgt voor menu op elke pagina-->
+            <li><a href='index.html'>Home</a></li>
+            <li><a href="binairstelsel.html">Binaire stelsel</a></li>
+            <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
+            <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
+            <li><a href='Compressie.html'>Compressietechnieken</a></li>
+            <li><a href="Computerarchitectuur.html">Computerarchitectuur</a></li>
+        </ul>
+        <div id='tekst1'><!--stijl van de tekst-->
