--- a/kleurmodellen.html
+++ b/kleurmodellen.html
@@ -17,6 +17,7 @@
             <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
             <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
+            <li><a href="Computerarchitectuur.html">Computerarchitectuur</a></li>
         </ul>
         <div id="tekst1"><!--stijl van de tekst-->
             <h1>Uitleg Kleurmodellen</h1>
