--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -20,3 +20,16 @@
             <li><a href="Computerarchitectuur.html">Computerarchitectuur</a></li>
         </ul>
         <div id='tekst1'><!--stijl van de tekst-->
+
+            <footer class="footer"><!--zorgt voor footer-->
+                <p>&copy;Maker website: Eveline Nout</p>
+                <p>Vlietland College A5A</p>
+                <p>eveline.nout@gmail.com</p>
+              </footer>
+
+              </div>
+            </body>
+           </html>
+
+
+              
