--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <li><a href='kleurmodellen.html'>Kleurmodellen</a></li>
             <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
+            <li><a href="Computerarchitectuur.html">Computerarchitectuur</a></li>
   
             </ul>
         
