--- a/dropdown.html
+++ b/dropdown.html
@@ -1,1 +1,8 @@
-
+<div class="dropdown">
+    <button class="dropbtn">Dropdown</button>
+    <div class="dropdown-content">
+      <li><a href="Fysieke laag.html">Fysieke laag</a></li>
+      <li><a href="Logische laag.html">Logischelaag</a></li>
+      <li><a href="Toepassingenlaag.html">Toepassingslaag</a></li>
+    </div>
+  </div>
