--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -19,6 +19,9 @@
         <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
         <li><a href='Compressie.html'>Compressietechnieken</a></li>
         <li><a href="Computerarchitectuur.html">Computerarchitectuur</a></li>
+        <li><a href="Fysieke laag.html">Fysiek laag</a></li>
+        <li><a href="Logische laag.html"> Logische laag</a></li>
+        <li><a href="Toepassingenlaag.html">Toepassingslaag</a></li>
     </ul>
 <div id="tekst1"><!--stijl van de tekst-->
    <h1>Uitleg binaire stelsel</h1>
