--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
             <li><a href="Computerarchitectuur.html">Computerarchitectuur</a></li>
+            <li><a href="Fysieke laag.html">Fysiek laag</a></li>
+            <li><a href="Logische laag.html"> Logische laag</a></li>
+            <li><a href="Toepassingenlaag.html">Toepassingslaag</a></li>
   
             </ul>
         
