--- a/Fysieke laag.html
+++ b/Fysieke laag.html
@@ -24,3 +24,14 @@
         <li><a href="Toepassingenlaag.html">Toepassingslaag</a></li>
     
     </ul>
+    <div id='tekst1'><!--stijl van de tekst-->
+
+        <footer class="footer"><!--zorgt voor footer-->
+            <p>&copy;Maker website: Eveline Nout</p>
+            <p>Vlietland College A5A</p>
+            <p>eveline.nout@gmail.com</p>
+          </footer>
+
+          </div>
+        </body>
+       </html>
