--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -22,6 +22,16 @@
             <li><a href="Logische laag.html"> Logische laag</a></li>
             <li><a href="Toepassingenlaag.html">Toepassingslaag</a></li>
         </ul>
+
+        <div class="dropdown">
+            <button class="dropbtn">Dropdown</button>
+            <div class="dropdown-content">
+              <li><a href="Fysieke laag.html">Fysieke laag</a></li>
+              <li><a href="Logische laag.html">Logische laag</a></li>
+              <li><a href="Toepassingenlaag.html">Toepassingslaag</a></li>
+            </div>
+          </div>
+        
         <div id='tekst1'><!--stijl van de tekst-->
 
             <footer class="footer"><!--zorgt voor footer-->
