--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -23,8 +23,8 @@
             <li><a href="Toepassingenlaag.html">Toepassingslaag</a></li>
         </ul>
 <ul id="ul2">
-        <div class="dropdown">
-            <button class="dropbtn">Dropdown</button>
+        <div class="Computerarchitectuur">
+            <button class="dropbtn"></button>
             <div class="dropdown-content">
               <li><a href="Fysieke laag.html">Fysieke laag</a></li>
               <li><a href="Logische laag.html">Logische laag</a></li>
