--- a/Fysieke laag.html
+++ b/Fysieke laag.html
@@ -12,6 +12,10 @@
      <img class="img"><!--maakt de afbeelding kleiner-->
 
     <br>
+    <h2>Uitleg fysieke laag</h2>
+    
+    <p>De fysieke laag is de eerste laag uit het OSI-model. Het OSI-model zorgt eigenlijk voor de communucatie van heel veel data. Tot de fysieke laag behoren: de computer-hardware, het netwerk-hardware en de randapparaten, zoals het beeldscherm, toetsenbord of printer. De informatie die verwerkt wordt hefet hierbij een fysieke oorpsrong nodig, bijvoorbeeld als het toetsenbord wordt aangeraakt en knoppen worden ingedrukt.
+      Ook alle fysieke bekabeling tussen elementen van een apparaat behoor tot de fysieke laag. </p>
 
     
     </ul>
