--- a/Fysieke laag.html
+++ b/Fysieke laag.html
@@ -10,6 +10,8 @@
       <menu class="menu li"><!--zorgt voor de hover-->
     
      <img class="img"><!--maakt de afbeelding kleiner-->
+     
+     <div id="tekst1"><!--stijl van de tekst-->
 
     <br>
     <h2>Uitleg fysieke laag</h2>
