--- a/Toepassingenlaag.html
+++ b/Toepassingenlaag.html
@@ -13,11 +13,14 @@
 
     <br>
      <ul id="ul1"><!--zorgt voor menu op elke pagina-->
-      
+
         <li><a href="Computerarchitectuur.html">Computerarchitectuur</a></li>
     
     </ul>
     <div id='tekst1'><!--stijl van de tekst-->
+
+      <h1>Uitleg toepassingslaag</h1>
+      <p>De laatste laag van het 3-lagenmodel is de toepassingslaag. </p>
 
         <footer class="footer"><!--zorgt voor footer-->
             <p>&copy;Maker website: Eveline Nout</p>
