--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
             <li><a href='Compressie.html'>Compressietechnieken</a></li>
             <li><a href="Computerarchitectuur.html">Computerarchitectuur</a></li>
+            <li><a href="Bluetooth.html">Bluetooth werking voor een smartphone</a></li>
            
   
             </ul>
