--- a/Computerarchitectuur.html
+++ b/Computerarchitectuur.html
@@ -21,6 +21,7 @@
             <li><a href="Fysieke laag.html">Fysiek laag</a></li>
             <li><a href="Logische laag.html"> Logische laag</a></li>
             <li><a href="Toepassingenlaag.html">Toepassingslaag</a></li>
+            <li><a href="Bluetooth.html">Bluetooth werking voor een smartphone</a></li>
         </ul>
 <ul id="ul2">
         <div class="Computerarchitectuur">
