--- a/Bluetooth.html
+++ b/Bluetooth.html
@@ -23,9 +23,14 @@
         
     </ul>
 <div id="tekst1"><!--stijl van de tekst-->
+    </div>
 
     <footer class="footer"><!--zorgt voor footer-->
         <p>&copy;Maker website: Eveline Nout</p>
         <p>Vlietland College A5A</p>
         <p>eveline.nout@gmail.com</p>
       </footer>
+
+</menu>
+</body>
+</html>
