--- a/Bluetooth.html
+++ b/Bluetooth.html
@@ -23,6 +23,11 @@
         
     </ul>
 <div id="tekst1"><!--stijl van de tekst-->
+    <h1>Hoe werkt bluetooth?</h1>
+    <p>Radioverbinding</p>
+    <p>Bluetooth is eigenlijk een radioverbinding met een freqentiegebied op een UHF-kanaal. Dit zorgt ervoor dat commnicatie en data op korte afstanden kunnen ariveren bij een ander apparaat. Een bron kan met meerdere bluetooth apparaten verbinden. Er onstaat dan een zogenaamd piconetwerk. In dit netwerk kunnen maximaal acht diverse apparaten. De andere worden eigenlijk even opzij gezet.
+         </p>
+         <p>Bluetooth werkt met een gHZ-radioverbinding, die een bereik kan hebben van 100 meter en signalen door materialen kan dringen (behalve metaal). </p>
     </div>
 
     <footer class="footer"><!--zorgt voor footer-->
