--- a/binairstelsel.html
+++ b/binairstelsel.html
@@ -19,7 +19,7 @@
         <li><a href='Algemene informatie.html'>Werking van de Computer</a></li>
         <li><a href='Compressie.html'>Compressietechnieken</a></li>
         <li><a href="Computerarchitectuur.html">Computerarchitectuur</a></li>
-        <li><a href="Bluetooth.html">Bluetooth werking voor een smartphone</a></li>
+        <li><a href="Bluetooth.html">Bluetooth werking </a></li>
         
     </ul>
 <div id="tekst1"><!--stijl van de tekst-->
